# sphero-and-mousr-qt-controller

./: CMakeLists.txt  DeviceHandler.cpp  DeviceHandler.h  MousrHandler.cpp  MousrHandler.h  README.md  devicediscoverer.cpp  devicediscoverer.h  images.qrc  main.cpp  main.qrc  mousr-qt-controller.pro  utils.h
qml/: Button.qml  ColorSelect.qml  Joystick.qml  MousrView.qml  RobotView.qml  SpheroView.qml  Spinner.qml  main.qml
src/: BasicTypes.h  Cursor.cpp  Cursor.h  devicediscoverer.cpp  devicediscoverer.h  main.cpp  utils.h
src/mousr/: AutoplayConfig.cpp  AutoplayConfig.h  MousrHandler.cpp  MousrHandler.h
src/sphero/: CommandPackets.h  ResponsePackets.h  SpheroHandler.cpp  SpheroHandler.h  Uuids.h
src/sphero/v1/: CommandPackets.h  ResponsePackets.h
src/sphero/v2/: Constants.h  Packets.h
